fixing display flex on iOS

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+@-webkit-keyframes fadeIn {
+  from { opacity: 0; }
+  to { opacity: 1; }
+}
+
 @keyframes fadeIn {
   from { opacity: 0; }
   to { opacity: 1; }
@@ -11,12 +16,16 @@
 }
 
 .levels, .display, .How2Play {
+  -webkit-animation-name: fadeIn;
   animation-name: fadeIn;
+  -webkit-animation-duration: 2s;
   animation-duration: 2s;
 }
 
 body {
+  -webkit-animation-name: fadeIn;
   animation-name: fadeIn;
+  -webkit-animation-duration: 2s;
   animation-duration: 2s;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -29,15 +38,14 @@ body {
 @media only screen and (min-width: 0px) {
   .App .container, .display .container, .How2Play .container {
     display: flex;
-    display: -ms-flexbox;
     display: -moz-flex;
-    display: -moz-box;
     display: -webkit-flex;
-    display: -webkit-box;
     flex-wrap: wrap;
     height: 100vh;
     justify-content: center;
     align-content: center;
+    align-items: center;
+    -webkit-align-items: center;
   } 
 }
 
